; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeResult.c_ExecResultRestrPos.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeResult.c_ExecResultRestrPos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Result nodes do not support mark/restore\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ExecResultRestrPos(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @outerPlanState(i32* %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @ExecRestrPos(i32* %9)
  br label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @ERROR, align 4
  %13 = call i32 @elog(i32 %12, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %11, %8
  ret void
}

declare dso_local i32* @outerPlanState(i32*) #1

declare dso_local i32 @ExecRestrPos(i32*) #1

declare dso_local i32 @elog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
